<resources>
    <string name="app_name">ЗНО 2017</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Про додаток</string>
    <string name="logo">logo</string>
    <string name="nav_programsZNO2017">Програми ЗНО 2017</string>
    <string name="nav_infopage">Інформаційна сторінка</string>
    <string name="nav_registration">Реєстрація на ЗНО</string>
    <string name="nav_trainingZNO">Офіційні тести</string>
    <string name="nav_support">Залишити відгук</string>
    <string name="nav_group3">Абітурієнту</string>
    <string name="nav_main">Головна</string>
    <string name="banner_ad_unit_id">ca-app-pub-8880682166113696/6970362964</string>
    <string name="shortcutname">ЗНО 2017</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="pdf_show_online_dialog_title">Show PDF</string>
    <string name="pdf_show_online_dialog_question">You are trying to open a PDF file, but you don\'t have a PDF reader installed. Do you want to read the PDF file online with Google Drive (Requires Google account)?</string>
    <string name="pdf_show_online_dialog_button_yes">Yes, read online</string>
    <string name="pdf_show_online_dialog_button_no">No</string>
    <string name="pdf_show_local_progress_title">Please wait</string>
    <string name="pdf_show_local_progress_content">Downloading PDF&#8230;</string>
    <string name="noAds">Відключити рекламу (19.99 ₴)</string>
    <string name="renew_premium">Відновити покупку</string>
</resources>
