<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:orderInCategory="1">
        <item
            android:id="@+id/nav_programsZNO2017"
            android:title="@string/nav_programsZNO2017"
            android:orderInCategory="2"/>
        <item
            android:id="@+id/nav_infopage"
            android:title="@string/nav_infopage"
            android:orderInCategory="1"/>
        <item
            android:id="@+id/nav_registration"
            android:title="@string/nav_registration"
            android:orderInCategory="3"
            android:onClick="nav_registration_Click"/>
        <item
            android:id="@+id/nav_trainingZNO"
            android:orderInCategory="4"
            android:title="@string/nav_trainingZNO"/>
        <item
            android:id="@+id/nav_main"
            android:orderInCategory="0"
            android:title="@string/nav_main"/>
    </group>

    <item
        android:title="@string/nav_support"
        android:orderInCategory="100">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_support"/>
        </menu>
    </item>

    <item
        android:title="@string/nav_group3"
        android:orderInCategory="200">
        <menu>
            <item
                android:id="@+id/nav_vstupinfo"
                android:title="Vstup.info"/>
            <item
                android:id="@+id/nav_abitpoisk"
                android:title="Abit-poisk"/>
            <item
                android:id="@+id/nav_sendonline"
                android:title="Подати документи онлайн"
                android:onClick="nav_online_docs"/>
        </menu>
    </item>

</menu>
